src/objects/ReassignOwnershipControllerNonUser__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of objects and their related fields that aren&apos;t mapped directly to a User via a lookup.  Examples would be dropdowns where you choose a user.  Because this will return metadata and not records, they cannot be updated directly, instead it is an informational search.</description>
    <fields>
        <fullName>Object_Field_Name__c</fullName>
        <inlineHelpText>The api name of the field to search</inlineHelpText>
        <label>Object Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The api name of the object</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_Name__c</fullName>
        <inlineHelpText>The api name on the user record to find a match on</inlineHelpText>
        <label>User Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reassign User - Non-Lookup User Fields</label>
</CustomObject>